sandbox/output
StringCalculator.java:11: error: cannot find symbol
       if(input.match(COMMA_SPLITTER + "{2}")){  
               ^
  symbol:   method match(String)
  location: variable input of type String
1 error
